--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "#todo: incorporate different collection types rather than a catch all publications, requires other changes to template\n",
     "publist = {\n",
     "    \"proceeding\": {\n",
-    "        \"file\" : \"proceedings.bib\",\n",
+    "        \"file\" : \"../files/proceedings.bib\",\n",
     "        \"venuekey\": \"booktitle\",\n",
     "        \"venue-pretext\": \"In the proceedings of \",\n",
     "        \"collection\" : {\"name\":\"publications\",\n",
@@ -51,8 +51,8 @@
     "        \n",
     "    },\n",
     "    \"journal\":{\n",
-    "        \"file\": \"pubs.bib\",\n",
-    "        \"venuekey\" : \"journal\",\n",
+    "        \"file\": \"../files/pubs.bib\",\n",
+    "        \"venuekey\" : \"journaltitle\",\n",
     "        \"venue-pretext\" : \"\",\n",
     "        \"collection\" : {\"name\":\"publications\",\n",
     "                        \"permalink\":\"/publication/\"}\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,11 +79,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUCESSFULLY PARSED oehmcke_event_2015: \" Event Detection in Marine Time Series Data  \"\n",
+      "SUCESSFULLY PARSED oehmcke_knn_2016: \" {kNN} ensembles with penalized {DTW} for multivariate time s ... \"\n",
+      "SUCESSFULLY PARSED woon_spatio-temporal_2017: \" Spatio-Temporal Wind Power Prediction using Recurrent Neural ... \"\n",
+      "SUCESSFULLY PARSED oehmcke_recurrent_2017: \" Recurrent Neural Networks and Exponential {PAA} for Virtual  ... \"\n",
+      "SUCESSFULLY PARSED oehmcke_analysis_2015: \" Analysis of Diversity Methods for Evolutionary Multi-objecti ... \"\n",
+      "SUCESSFULLY PARSED oehmcke_deep_2022: \" Deep Learning Based 3D Point Cloud Regression for Estimating ... \"\n",
+      "SUCESSFULLY PARSED serykh_seasonal-trend_2023: \" Seasonal-Trend Time Series Decomposition on Graphics Process ... \"\n",
+      "SUCESSFULLY PARSED oehmcke_input_2022: \" Input Selection for Bandwidth-Limited Neural Network Inferen ... \"\n",
+      "SUCESSFULLY PARSED oehmcke_creating_2020: \" Creating Cloud-Free Satellite Imagery from Image Time Series ... \"\n",
+      "SUCESSFULLY PARSED dai_attentional_2021: \" Attentional Feature Fusion  \"\n",
+      "SUCESSFULLY PARSED dai_attention_2020: \" Attention as Activation  \"\n",
+      "SUCESSFULLY PARSED oehmcke_direct_2018: \" Direct Training of Dynamic Observation Noise with {UMarineNe ... \"\n",
+      "SUCESSFULLY PARSED oehmcke_detecting_2019: \" Detecting Hardly Visible Roads in Low-Resolution Satellite T ... \"\n",
+      "SUCESSFULLY PARSED silhan_evolution_2019: \" Evolution of Stacked Autoencoders  \"\n",
+      "SUCESSFULLY PARSED poppinga_storyteller_2013: \" Storyteller: in-situ reflection on study experiences  \"\n",
+      "SUCESSFULLY PARSED nedungadi_mmearth_2024: \" {MMEarth}: Exploring Multi-modal Pretext Tasks for Geospatia ... \"\n",
+      "SUCESSFULLY PARSED oehmcke_input_2017: \" Input Quality Aware Convolutional {LSTM} Networks for Virtua ... \"\n",
+      "SUCESSFULLY PARSED igel_remember_2023: \" Remember to Correct the Bias When Using Deep Learning for Re ... \"\n",
+      "SUCESSFULLY PARSED oehmcke_deep_2024: \" Deep point cloud regression for above-ground forest biomass  ... \"\n",
+      "SUCESSFULLY PARSED revenga_above-ground_2022: \" Above-Ground Biomass Prediction for Croplands at a Sub-Meter ... \"\n",
+      "SUCESSFULLY PARSED sortkaer_both_2021: \" Both sides of the story: comparing student-level data on rea ... \"\n",
+      "SUCESSFULLY PARSED xu_global_2024: \" Global mapping of human-transformed dike-pond systems  \"\n",
+      "SUCESSFULLY PARSED reiner_more_2023: \" More than one quarter of Africa's tree cover found outside a ... \"\n",
+      "SUCESSFULLY PARSED crump_modelling_2025: \" Modelling Residential Fire Vulnerability of Denmark  \"\n",
+      "SUCESSFULLY PARSED bernardino_predictability_2025: \" Predictability of abrupt shifts in dryland ecosystem functio ... \"\n"
+     ]
+    }
+   ],
    "source": [
     "for pubsource in publist:\n",
     "    parser = bibtex.Parser()\n",
@@ -201,7 +231,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -215,9 +245,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
