--- a/files/proceedings.bib
+++ b/files/proceedings.bib
@@ -1,4 +1,3 @@
-
 @inproceedings{oehmcke_event_2015,
 	title = {Event Detection in Marine Time Series Data},
 	url = {https://doi.org/10.1007/978-3-319-24489-1\_24},
@@ -7,7 +6,7 @@
 	booktitle = {Advances in Artificial Intelligence ({KI})},
 	publisher = {Springer},
 	author = {Oehmcke, Stefan and Zielinski, Oliver and Kramer, Oliver},
-	date = {2015},
+	year = {2015},
 }
 
 @inproceedings{oehmcke_knn_2016,
@@ -18,7 +17,7 @@
 	booktitle = {International Joint Conference on Neural Networks ({IJCNN})},
 	publisher = {{IEEE}},
 	author = {Oehmcke, Stefan and Zielinski, Oliver and Kramer, Oliver},
-	date = {2016},
+	year = {2016},
 }
 
 @inproceedings{woon_spatio-temporal_2017,
@@ -28,7 +27,7 @@
 	booktitle = {International Conference in Neural Information Processing ({ICONIP})},
 	publisher = {Springer},
 	author = {Woon, Wei Lee and Oehmcke, Stefan and Kramer, Oliver},
-	date = {2017},
+	year = {2017},
 	keywords = {recurrent},
 }
 
@@ -40,20 +39,7 @@
 	booktitle = {International Joint Conference on Neural Networks ({IJCNN})},
 	publisher = {{IEEE}},
 	author = {Oehmcke, Stefan and Zielinski, Oliver and Kramer, Oliver},
-	date = {2017},
-	keywords = {recurrent},
-}
-
-@article{oehmcke_input_2017,
-	title = {Input Quality Aware Convolutional {LSTM} Networks for Virtual Marine Sensors},
-	volume = {275},
-	url = {https://doi.org/10.1016/j.neucom.2017.11.027},
-	doi = {10.1016/j.neucom.2017.11.027},
-	pages = {2603--2615},
-	journaltitle = {Neurocomputing},
-	author = {Oehmcke, Stefan and Zielinski, Oliver and Kramer, Oliver},
-	date = {2017},
-	note = {Publisher: Elsevier},
+	year = {2017},
 	keywords = {recurrent},
 }
 
@@ -68,19 +54,10 @@
 	publisher = {Springer},
 	author = {Oehmcke, Stefan and Heinermann, Justin and Kramer, Oliver},
 	editor = {Mora, Antonio Miguel and Squillero, Giovanni},
-	date = {2015},
+	year = {2015},
 }
 
-@article{igel_remember_2023,
-	title = {Remember to Correct the Bias When Using Deep Learning for Regression!},
-	volume = {37},
-	url = {https://doi.org/10.1007/s13218-023-00801-0},
-	doi = {10.1007/s13218-023-00801-0},
-	pages = {33--40},
-	number = {1},
-	journaltitle = {Künstliche Intelligenz},
-	author = {Igel, Christian and Oehmcke, Stefan},
-	date = {2023},
+
 
 @inproceedings{oehmcke_deep_2022,
 	title = {Deep Learning Based 3D Point Cloud Regression for Estimating Forest Biomass},
@@ -88,19 +65,9 @@
 	booktitle = {International Conference on Advances in Geographic Information Systems ({SIGSPATIAL})},
 	publisher = {{ACM}},
 	author = {Oehmcke, Stefan and Li, Lei and Revenga, Jaime and Nord-Larsen, Thomas and Trepekli, Katerina and Gieseke, Fabian and Igel, Christian},
-	date = {2022},
+	year = {2022},
 }
 
-@article{oehmcke_deep_2024,
-	title = {Deep point cloud regression for above-ground forest biomass estimation from airborne {LiDAR}},
-	volume = {302},
-	url = {https://doi.org/10.1016/j.rse.2023.113968},
-	pages = {113968},
-	journaltitle = {Remote Sensing of Environment},
-	author = {Oehmcke, Stefan and Li, Lei and Trepekli, Katerina and Revenga, Jaime C and Nord-Larsen, Thomas and Gieseke, Fabian and Igel, Christian},
-	date = {2024},
-	note = {Publisher: Elsevier},
-}
 
 @inproceedings{serykh_seasonal-trend_2023,
 	title = {Seasonal-Trend Time Series Decomposition on Graphics Processing Units},
@@ -109,38 +76,7 @@
 	booktitle = {International Conference on Big Data},
 	publisher = {{IEEE}},
 	author = {Serykh, Dmitry and Oehmcke, Stefan and Oancea, Cosmin E. and Masiliunas, Dainius and Verbesselt, Jan and Cheng, Yan and Horion, Stéphanie and Gieseke, Fabian and Hinnerskov, Nikolaj},
-	date = {2023},
-}
-
-@misc{painter_discover_2022,
-	title = {Discover the Mysteries of the Maya: Selected Contributions from the Machine Learning Challenge; The Discovery Challenge Workshop at {ECML} {PKDD} 2021},
-	url = {https://arxiv.org/abs/2208.03163},
-	publisher = {{arXiv}},
-	author = {Painter, Matthew and Kramer, Iris and Landauer, Jürgen and Hoppenstedt, Burkhard and Allgaier, Johannes and Hellweg, Thorben and Oehmcke, Stefan and Kariryaa, Ankit and Gieseke, Fabian and Igel, Christian and Ayala, Christian and Aranda, Carlos and Galar, Mikel},
-	date = {2022},
-}
-
-@article{revenga_above-ground_2022,
-	title = {Above-Ground Biomass Prediction for Croplands at a Sub-Meter Resolution Using {UAV}–{LiDAR} and Machine Learning Methods},
-	volume = {14},
-	issn = {2072-4292},
-	url = {https://doi.org/10.3390/rs14163912},
-	number = {16},
-	journaltitle = {Remote Sensing},
-	author = {Revenga, Jaime C. and Trepekli, Katerina and Oehmcke, Stefan and Jensen, Rasmus and Li, Lei and Igel, Christian and Gieseke, Fabian Cristian and Friborg, Thomas},
-	date = {2022},
-	note = {Publisher: {MDPI}},
-}
-
-@article{sortkaer_both_2021,
-	title = {Both sides of the story: comparing student-level data on reading performance from administrative registers to application generated data from a reading app},
-	volume = {10},
-	url = {https://doi.org/10.1140/epjds/s13688-021-00300-y},
-	pages = {44},
-	number = {1},
-	journaltitle = {{EPJ} Data Science},
-	author = {Sortkær, Bent and Smith, Emil and Reimer, David and Oehmcke, Stefan and Andersen, Ida Gran},
-	date = {2021},
+	year = {2023},
 }
 
 @inproceedings{oehmcke_input_2022,
@@ -150,7 +86,7 @@
 	booktitle = {International Conference on Data Mining ({SDM})},
 	publisher = {{SIAM}},
 	author = {Oehmcke, Stefan and Gieseke, Fabian},
-	date = {2022},
+	year = {2022},
 }
 
 @inproceedings{oehmcke_creating_2020,
@@ -160,7 +96,7 @@
 	booktitle = {{BIGSPATIAL} '20: {ACM} {SIGSPATIAL} Analytics for Big Geospatial Data},
 	publisher = {{ACM}},
 	author = {Oehmcke, Stefan and Chen, Tzu-Hsin Karen and Prishchepov, Alexander V. and Gieseke, Fabian},
-	date = {2020},
+	year = {2020},
 }
 
 @inproceedings{dai_attentional_2021,
@@ -170,7 +106,7 @@
 	booktitle = {Winter Conference on Applications of Computer Vision ({WACV})},
 	publisher = {{IEEE}},
 	author = {Dai, Yimian and Gieseke, Fabian and Oehmcke, Stefan and Wu, Yiquan and Barnard, Kobus},
-	date = {2021},
+	year = {2021},
 }
 
 @inproceedings{dai_attention_2020,
@@ -180,7 +116,7 @@
 	booktitle = {International Conference on Pattern Recognition ({ICPR})},
 	publisher = {{IEEE}},
 	author = {Dai, Yimian and Gieseke, Fabian and Oehmcke, Stefan and Wu, Yiquan and Barnard, Kobus},
-	date = {2020},
+	year = {2020},
 }
 
 @inproceedings{oehmcke_direct_2018,
@@ -189,7 +125,7 @@
 	pages = {123--133},
 	booktitle = {International Conference on Artificial Neural Networks ({ICANN})},
 	author = {Oehmcke, Stefan and Zielinski, Oliver and Kramer, Oliver},
-	date = {2018},
+	year = {2018},
 }
 
 @inproceedings{oehmcke_detecting_2019,
@@ -199,7 +135,7 @@
 	booktitle = {International Conference on Big Data},
 	publisher = {{IEEE}},
 	author = {Oehmcke, Stefan and Thrysøe, Christoffer and Borgstad, Andreas and Salles, Marcos Antonio Vaz and Brandt, Martin and Gieseke, Fabian},
-	date = {2019},
+	year = {2019},
 }
 
 @inproceedings{silhan_evolution_2019,
@@ -208,7 +144,7 @@
 	pages = {823--830},
 	booktitle = {Congress on Evolutionary Computation ({CEC})},
 	author = {Silhan, Tim and Oehmcke, Stefan and Kramer, Oliver},
-	date = {2019},
+	year = {2019},
 }
 
 @inproceedings{poppinga_storyteller_2013,
@@ -217,15 +153,7 @@
 	pages = {472--475},
 	booktitle = {International Conference on Human-Computer Interaction with Mobile Devices and Services ({MobileHCI})},
 	author = {Poppinga, Benjamin and Oehmcke, Stefan and Heuten, Wilko and Boll, Susanne},
-	date = {2013},
-}
-
-@thesis{oehmcke_deep_2018,
-	title = {Deep Learning of Virtual Marine Sensors},
-	institution = {Carl von Ossietzky Universität Oldenburg},
-	type = {phdthesis},
-	author = {Oehmcke, Stefan},
-	date = {2018},
+	year = {2013},
 }
 
 @inproceedings{nedungadi_mmearth_2024,
@@ -241,58 +169,6 @@
 	author = {Nedungadi, Vishal and Kariryaa, Ankit and Oehmcke, Stefan and Belongie, Serge J. and Igel, Christian and Lang, Nico},
 	editor = {Leonardis, Ales and Ricci, Elisa and Roth, Stefan and Russakovsky, Olga and Sattler, Torsten and Varol, Gül},
 	urldate = {2024-12-05},
-	date = {2024},
+	year = {2024},
 	keywords = {Computer Science - Machine Learning, Computer Science - Artificial Intelligence, Computer Science - Computer Vision and Pattern Recognition},
-}
-
-@article{xu_global_2024,
-	title = {Global mapping of human-transformed dike-pond systems},
-	volume = {313},
-	url = {https://www.sciencedirect.com/science/article/pii/S0034425724003808},
-	pages = {114354},
-	journaltitle = {Remote Sensing of Environment},
-	author = {Xu, Yang and Feng, Lian and Fang, Hongwei and Song, Xiao-Peng and Gieseke, Fabian and Kariryaa, Ankit and Oehmcke, Stefan and Gibson, Luke and Jiang, Xiating and Lin, Ruimin},
-	urldate = {2024-12-10},
-	date = {2024},
-	note = {Publisher: Elsevier},
-}
-
-@article{reiner_more_2023,
-	title = {More than one quarter of Africa's tree cover found outside areas previously classified as forest},
-	url = {https://doi.org/10.21203/rs.3.rs-1816495/v2},
-	journaltitle = {Nature Communications},
-	author = {Reiner, Florian and Brandt, Martin and Tong, Xiaoye and Skole, David and Kariryaa, Ankit and Ciais, Philippe and Davies, Andrew and Hiernaux, Pierre and Chave, Jerome and Mugabowindekwe, Maurice and Igel, Christian and Oehmcke, Stefan and Gieseke, Fabian and Li, Sizhuo and Liu, Siyu and Saatchi, Sassan and Boucher, Peter and Singh, Jenia and Taugourdeau, Simon and Dendoncker, Morgane and Song, Xiao-Peng and Mertz, Ole and Tucker, Compton and Fensholt, Rasmus},
-	date = {2023},
-}
-
-@article{crump_modelling_2025,
-	title = {Modelling Residential Fire Vulnerability of Denmark},
-	volume = {61},
-	rights = {https://creativecommons.org/licenses/by/4.0},
-	issn = {0015-2684, 1572-8099},
-	url = {https://link.springer.com/10.1007/s10694-024-01633-6},
-	doi = {10.1007/s10694-024-01633-6},
-	abstract = {This study analyzes socio-economic demographics (including Geomatic conzoom® segmented demographic variables) as well as building and property registration information as risk factors in relation to the prevalence of residential building fires within 100 m × 100 m cells. The logistic regression model achieved a receiver operating curve ({ROC}) of 0.74 and a precision-recall curve of 0.12 on the testing dataset. The model identifies 19 significant variables related to the risk of residential fire. The top 5 highest performing variables in our model and their odds ratios are the following: number of people ({OR} 1.25), Multi/family residence-building type ({OR} 1.20), number of buildings ({OR} 1.18), conzoom® Type C—Country/Rural Communities ({OR} 0.85), construction year ({OR} 0.87). These results indicate that socio-economic factors play a large role in influencing fire vulnerability within residential areas and can help prioritize resource allocation to reduce fire vulnerability in the identified risk factor groups.},
-	pages = {655--679},
-	number = {2},
-	journaltitle = {Fire Technology},
-	shortjournal = {Fire Technol},
-	author = {Crump, Naomi and Markussen, Bo and Oehmcke, Stefan and Igel, Christian and Skov-Petersen, Hans and Karlsson Nyed, Patrik},
-	urldate = {2025-07-24},
-	date = {2025-03},
-	langid = {english},
-	note = {Publisher: Springer Science and Business Media {LLC}},
-}
-
-@article{bernardino_predictability_2025,
-	title = {Predictability of abrupt shifts in dryland ecosystem functioning},
-	volume = {15},
-	url = {https://www.nature.com/articles/s41558-024-02201-0},
-	pages = {86--91},
-	number = {1},
-	journaltitle = {Nature Climate Change},
-	author = {Bernardino, Paulo N. and De Keersmaecker, Wanda and Horion, Stéphanie and Oehmcke, Stefan and Gieseke, Fabian and Fensholt, Rasmus and Van De Kerchove, Ruben and Lhermitte, Stef and Abel, Christin and Van Meerbeek, Koenraad},
-	urldate = {2025-07-24},
-	date = {2025},
-	note = {Publisher: Nature Publishing Group {UK} London},
 }
